service.yml
apiVersion: v1
kind: Service
metadata:
  name: k3s-local-service
spec:
  selector:
    name: k3s-local
  type: NodePort
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
