ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k3s-local-ingress
  namespace: k3s-local
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: k3s-local-k3s-local-ingress@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - host: k3s.local
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: k3s-local-service
              port:
                number: 80
